@@ -124,11 +124,6 @@ libIDL
 </listitem>
 <listitem>
 <para>
-gnome-common
-</para>
-</listitem>
-<listitem>
-<para>
 ORBit2
 </para>
 </listitem>
@@ -190,6 +185,11 @@ gnome-mime-data
 <listitem>
 <para>
 gnome-vfs
+</para>
+</listitem>
+<listitem>
+<para>
+esound
 </para>
 </listitem>
 <listitem>
@@ -259,11 +259,6 @@ gnome-panel
 </listitem>
 <listitem>
 <para>
-esound
-</para>
-</listitem>
-<listitem>
-<para>
 gnome-session
 </para>
 </listitem>
@@ -299,11 +294,6 @@ gnome-applets
 </listitem>
 <listitem>
 <para>
-meta-gnome-core
-</para>
-</listitem>
-<listitem>
-<para>
 metacity
 </para>
 </listitem>
@@ -334,12 +324,7 @@ nautilus
 </listitem>
 <listitem>
 <para>
-gnome-control-center
-</para>
-</listitem>
-<listitem>
-<para>
-meta-nautilus
+control-center
 </para>
 </listitem>
 <listitem>
@@ -419,7 +404,7 @@ gal
 </listitem>
 <listitem>
 <para>
-procman
+gnome-system-monitor
 </para>
 </listitem>
 <listitem>
